After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 740177 - g_thread_init() should not be called if initialised already
g_thread_init() should not be called if initialised already
Status: RESOLVED FIXED
Product: java-atk-wrapper
Classification: Applications
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: java-atk-wrapper maintainer(s)
java-atk-wrapper maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2014-11-15 15:52 UTC by Magdalen Berns (irc magpie)
Modified: 2015-02-27 16:57 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
remove g_thread_init (714 bytes, patch)
2014-11-15 15:55 UTC, Magdalen Berns (irc magpie)
committed Details | Review

Description Magdalen Berns (irc magpie) 2014-11-15 15:52:29 UTC
More info here:

https://developer.gnome.org/gobject/unstable/gobject-Type-Information.html#g-type-init
Comment 1 Magdalen Berns (irc magpie) 2014-11-15 15:55:55 UTC
Created attachment 290760 [details] [review]
remove g_thread_init

Given that this happens automatically, there should be no need to invoke this function.
Comment 2 André Klapper 2015-02-27 16:57:42 UTC
[Moving at-spi/java-atk-wrapper bugs to separate product. See bug 740075]