remove g_thread_init()

This should happen automatically

Bug: https://bugzilla.gnome.org/show_bug.cgi?id=740177